--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@chakra-ui/react": "^2.4.1",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
-    "framer-motion": "^6.5.1"
+    "framer-motion": "^6.5.1",
+    "react-scroll": "^1.8.8"
   }
 }
